Fixed DeltaEvent update bug WIP: Verifying total probability calculation